Fix state machine issue, refactor

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,24 @@
-# Azure OpenAI Configuration
-AZURE_OPENAI_API_KEY=your-api-key
-AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
-AZURE_OPENAI_DEPLOYMENT=gpt-4
-AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
-AZURE_OPENAI_API_VERSION=2024-02-01
+UV_ENV_FILE=.env
+
+# LLM Provider Configuration
+# Options: "openai" (default) or "azure"
+LLM_PROVIDER=openai
+
+# OpenAI Configuration (default)
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+# OPENAI_BASE_URL=  # Optional: for custom endpoints (e.g., local LLM)
+
+# Azure OpenAI Configuration (if LLM_PROVIDER=azure)
+# AZURE_OPENAI_API_KEY=your-azure-api-key
+# AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+# AZURE_OPENAI_DEPLOYMENT=gpt-4
+# AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
+# AZURE_OPENAI_API_VERSION=2024-02-01
 
 # ChromaDB Configuration
-CHROMADB_PERSIST_DIR=./chroma_db
+CHROMADB_PERSIST_DIR=./data/rag/chroma_db
 
 # Logging Configuration
-MIT_LOG_LEVEL=INFO
+MIT_LOG_LEVEL=DEBUG
