--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-openai>=0.2.0",
     "chromadb>=0.5.0",
     "python-dotenv>=1.0.0",
+    "langchain-chroma>=1.1.0",
 ]
 
 [project.optional-dependencies]
