--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
-UV_ENV_FILE=.env
-
 # LLM Provider Configuration
-# Options: "openai" (default) or "azure"
+# Options: "openai" (default), "azure", or "gemini"
 LLM_PROVIDER=openai
 
-# OpenAI Configuration (default)
+# OpenAI Configuration (if LLM_PROVIDER=openai)
 OPENAI_API_KEY=your-openai-api-key
 OPENAI_MODEL=gpt-4
 OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 # OPENAI_BASE_URL=  # Optional: for custom endpoints (e.g., local LLM)
+
+# Google Gemini Configuration (if LLM_PROVIDER=gemini)
+# GOOGLE_API_KEY=your-google-api-key
+# GEMINI_MODEL=gemini-2.5-flash
+# GEMINI_EMBEDDING_MODEL=gemini-embedding-001
 
 # Azure OpenAI Configuration (if LLM_PROVIDER=azure)
 # AZURE_OPENAI_API_KEY=your-azure-api-key
@@ -21,4 +24,4 @@ OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 CHROMADB_PERSIST_DIR=./data/rag/chroma_db
 
 # Logging Configuration
-MIT_LOG_LEVEL=DEBUG
+MIT_LOG_LEVEL=INFO
