--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-text-splitters>=0.3.0",
     "langgraph>=0.2.0",
     "langchain-openai>=0.2.0",
+    "langchain-google-genai>=2.0.0",
     "chromadb>=0.5.0",
     "python-dotenv>=1.0.0",
     "langchain-chroma>=1.1.0",
